<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_enabled"
        android:title="@string/pref_enabled"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_repeatDelay"
        android:title="@string/pref_repeatDelay"
        android:entries="@array/pref_repeatDelay_entries"
        android:entryValues="@array/pref_repeatDelay_values"
        android:defaultValue="@string/pref_repeatDelay_default" />
    <CheckBoxPreference
        android:key="pref_cancelNotificationEnabled"
        android:title="@string/pref_cancelNotificationEnabled"
        android:summary="@string/pref_cancelNotificationSummary"
        android:defaultValue="true" />
</PreferenceScreen>
